<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/llMain"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Weight"
        android:ems="10"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edtHeightFt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/HeightFt"
        android:ems="10"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edtHeightIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/HeightIn"
        android:ems="10"
        android:inputType="number"/>

    <Button
        android:id="@+id/cclBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CclBmi"/>

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textSize="19sp"
        android:padding="100dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

<!--    <TextView-->
<!--        android:id="@+  id/resultTv1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/Result"-->
<!--        android:textSize="19sp"-->
<!--        android:padding="100dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:textStyle="bold"/>-->



</LinearLayout>